--- a/index.html
+++ b/index.html
@@ -1,69 +1,5 @@
-
-<html>
-   <head>Logo</head>
-   <body>
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<svg
-   xmlns:dc="http://purl.org/dc/elements/1.1/"
-   xmlns:cc="http://creativecommons.org/ns#"
-   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-   xmlns:svg="http://www.w3.org/2000/svg"
-   xmlns="http://www.w3.org/2000/svg"
-   xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-   xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-   sodipodi:docname="CS IN NUTSHELL LOGO.svg"
-   inkscape:version="1.0 (4035a4fb49, 2020-05-01)"
-   id="svg845"
-   version="1.1"
-   viewBox="0 0 210 297"
-   height="297mm"
-   width="210mm"
-   inkscape:export-filename="D:\Blog Images\Logo\CS IN NUTSHELL LOGO.png"
-   inkscape:export-xdpi="41.503498"
-   inkscape:export-ydpi="41.503498">
-  <defs
-     id="defs839" />
-  <sodipodi:namedview
-     inkscape:window-maximized="1"
-     inkscape:window-y="-9"
-     inkscape:window-x="-9"
-     inkscape:window-height="1001"
-     inkscape:window-width="1920"
-     showborder="false"
-     showgrid="false"
-     inkscape:document-rotation="0"
-     inkscape:current-layer="layer1"
-     inkscape:document-units="mm"
-     inkscape:cy="560"
-     inkscape:cx="400"
-     inkscape:zoom="0.35"
-     inkscape:pageshadow="2"
-     inkscape:pageopacity="0.0"
-     borderopacity="1.0"
-     bordercolor="#666666"
-     pagecolor="#ffffff"
-     id="base" />
-  <metadata
-     id="metadata842">
-    <rdf:RDF>
-      <cc:Work
-         rdf:about="">
-        <dc:format>image/svg+xml</dc:format>
-        <dc:type
-           rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-        <dc:title />
-      </cc:Work>
-    </rdf:RDF>
-  </metadata>
-  <g
-     id="layer1"
-     inkscape:groupmode="layer"
-     inkscape:label="Layer 1">
-    <path
+<svg xmlns="http://www.w3.org/2000/svg"> <path
        style="fill:#33475b;fill-opacity:1;stroke-width:3.48158"
-       d="M 203.41846,-56.507199 H -33.329061 c -21.237664,0 -38.297431,16.015227 -38.297431,35.860303 V 159.35086 c 0,19.84494 17.059767,35.86017 38.297431,35.86017 h 25.0673809 v 53.26825 c 0,3.13335 2.0889491,6.26684 5.222437,7.65943 1.3925886,0.6961 2.43699662,0.6961 3.82971662,0.6961 2.08894798,0 4.17789698,-0.6961 5.91866498,-1.74077 L 85.741,195.2109 h 117.67746 c 21.23767,0 38.2973,-16.01536 38.2973,-35.86031 V -20.647159 c 0,-19.845076 -17.05963,-35.860303 -38.2973,-35.860303 z M 21.679958,95.289672 c 4.526077,5.570618 10.444742,8.355798 17.407816,8.355798 7.311385,0 12.88187,-2.43713 16.711586,-7.311258 2.08895,-2.78531 3.82985,-6.61502 5.22244,-11.83746 h 21.23766 c -1.74077,11.1411 -6.61502,20.193258 -13.92641,27.156328 -7.31125,6.96321 -17.059634,10.44474 -28.897096,10.44474 -14.622639,0 -25.763609,-4.52594 -34.1194035,-13.92628 -8.3557936,-9.400198 -12.5336906,-22.282068 -12.5336906,-38.645478 0,-17.75612 4.8741256,-31.33422 14.2744586,-41.08274 8.3557945,-8.35579 18.4523565,-12.533686 31.3342265,-12.533686 17.059765,0 29.245275,5.570616 37.252895,16.711586 4.17789,6.26685 6.61502,12.53369 6.9632,18.80054 H 61.36998 c -1.39272,-4.87413 -3.13349,-8.70398 -5.22244,-11.14097 -3.829716,-4.1779 -9.400201,-6.26685 -17.059766,-6.26685 -7.659434,0 -13.578099,3.13336 -17.755996,9.4002 -4.526077,6.26685 -6.615025,14.97082 -6.615025,26.45997 0,11.1411 2.437128,19.84508 6.963205,25.41556 z M 167.90634,112.69762 c -7.31138,6.26685 -17.40795,9.05215 -30.28982,9.05215 -13.22991,0 -24.02284,-3.13348 -31.6824,-9.05215 C 98.27469,106.77896 94.44497,98.423162 94.44497,87.630242 h 20.19312 c 0.6961,4.52608 2.08895,8.00761 3.82972,10.44474 3.48167,4.177898 9.40033,6.266848 18.10431,6.266848 5.2223,0 9.4002,-0.6961 12.53369,-1.74077 5.91866,-2.08895 9.05202,-5.918668 9.05202,-11.837458 0,-3.48154 -1.39259,-5.91867 -4.52595,-7.65944 -3.13349,-1.74077 -7.65956,-3.48153 -14.27459,-4.87425 l -11.14097,-2.437 c -10.79292,-2.43713 -18.1043,-4.87426 -22.2822,-7.65957 -6.96307,-4.52607 -10.44474,-12.18551 -10.44474,-21.93389 0,-9.05215 3.48167,-16.71159 10.09669,-22.630251 6.6149,-5.918797 16.71159,-9.052154 29.59333,-9.052154 10.79292,0 20.19325,2.785309 27.85268,8.355794 7.65944,5.570481 11.83734,13.926281 12.18552,24.719201 h -20.54131 c -0.34871,-6.26685 -3.13336,-10.44474 -8.35579,-12.88187 -3.48154,-1.74077 -7.65944,-2.43713 -12.53369,-2.43713 -5.57049,0 -10.09656,1.0448 -13.5781,3.48167 -3.48167,2.08895 -4.87426,5.2223 -4.87426,9.4002 0,3.48167 1.74077,6.26685 4.87426,8.00762 2.08895,1.0448 6.61489,2.43712 13.5781,4.17789 l 17.75612,4.1779 c 7.65944,1.7409 13.5781,4.1779 17.40782,7.31138 5.91867,4.87426 9.05215,11.83733 9.05215,20.88949 0.6961,9.05215 -2.7853,16.711588 -10.09656,22.978428 z"
-       id="path1422" />
+       d="M84,5H16C9.9,5,5,9.6,5,15.3V67c0,5.7,4.9,10.3,11,10.3h7.2v15.3c0,0.9,0.6,1.8,1.5,2.2c0.4,0.2,0.7,0.2,1.1,0.2  c0.6,0,1.2-0.2,1.7-0.5l22.7-17.2H84c6.1,0,11-4.6,11-10.3V15.3C95,9.6,90.1,5,84,5z M31.8,48.6c1.3,1.6,3,2.4,5,2.4  c2.1,0,3.7-0.7,4.8-2.1c0.6-0.8,1.1-1.9,1.5-3.4h6.1c-0.5,3.2-1.9,5.8-4,7.8c-2.1,2-4.9,3-8.3,3c-4.2,0-7.4-1.3-9.8-4  c-2.4-2.7-3.6-6.4-3.6-11.1c0-5.1,1.4-9,4.1-11.8c2.4-2.4,5.3-3.6,9-3.6c4.9,0,8.4,1.6,10.7,4.8c1.2,1.8,1.9,3.6,2,5.4h-6.1  c-0.4-1.4-0.9-2.5-1.5-3.2C40.6,31.6,39,31,36.8,31c-2.2,0-3.9,0.9-5.1,2.7c-1.3,1.8-1.9,4.3-1.9,7.6C29.8,44.5,30.5,47,31.8,48.6z   M73.8,53.6c-2.1,1.8-5,2.6-8.7,2.6c-3.8,0-6.9-0.9-9.1-2.6s-3.3-4.1-3.3-7.2h5.8c0.2,1.3,0.6,2.3,1.1,3c1,1.2,2.7,1.8,5.2,1.8  c1.5,0,2.7-0.2,3.6-0.5c1.7-0.6,2.6-1.7,2.6-3.4c0-1-0.4-1.7-1.3-2.2c-0.9-0.5-2.2-1-4.1-1.4l-3.2-0.7c-3.1-0.7-5.2-1.4-6.4-2.2  c-2-1.3-3-3.5-3-6.3c0-2.6,1-4.8,2.9-6.5c1.9-1.7,4.8-2.6,8.5-2.6c3.1,0,5.8,0.8,8,2.4c2.2,1.6,3.4,4,3.5,7.1h-5.9  c-0.1-1.8-0.9-3-2.4-3.7c-1-0.5-2.2-0.7-3.6-0.7c-1.6,0-2.9,0.3-3.9,1c-1,0.6-1.4,1.5-1.4,2.7c0,1,0.5,1.8,1.4,2.3  c0.6,0.3,1.9,0.7,3.9,1.2l5.1,1.2c2.2,0.5,3.9,1.2,5,2.1c1.7,1.4,2.6,3.4,2.6,6C76.9,49.6,75.9,51.8,73.8,53.6z" />
   </g>
 </svg>
-     </body>
-</html>
